crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ001_DJ001.py.snap
---
source: crates/ruff/src/rules/flake8_django/mod.rs
expression: diagnostics
---
- kind:
    ModelStringFieldNullable:
      field_name: CharField
  location:
    row: 7
    column: 16
  end_location:
    row: 7
    column: 59
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: TextField
  location:
    row: 8
    column: 16
  end_location:
    row: 8
    column: 59
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: SlugField
  location:
    row: 9
    column: 16
  end_location:
    row: 9
    column: 59
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: EmailField
  location:
    row: 10
    column: 17
  end_location:
    row: 10
    column: 61
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: FilePathField
  location:
    row: 11
    column: 20
  end_location:
    row: 11
    column: 67
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: URLField
  location:
    row: 12
    column: 15
  end_location:
    row: 12
    column: 57
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: CharField
  location:
    row: 16
    column: 16
  end_location:
    row: 16
    column: 64
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: CharField
  location:
    row: 17
    column: 16
  end_location:
    row: 17
    column: 56
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: SlugField
  location:
    row: 18
    column: 16
  end_location:
    row: 18
    column: 59
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: EmailField
  location:
    row: 19
    column: 17
  end_location:
    row: 19
    column: 61
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: FilePathField
  location:
    row: 20
    column: 20
  end_location:
    row: 20
    column: 67
  fix: ~
  parent: ~
- kind:
    ModelStringFieldNullable:
      field_name: URLField
  location:
    row: 21
    column: 15
  end_location:
    row: 21
    column: 57
  fix: ~
  parent: ~

