crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ003_DJ003.py.snap
---
source: crates/ruff/src/rules/flake8_django/mod.rs
expression: diagnostics
---
- kind:
    name: LocalsInRenderFunction
    body: "Avoid passing `locals()` as context to a `render` function"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 41
  end_location:
    row: 5
    column: 49
  fix: ~
  parent: ~
- kind:
    name: LocalsInRenderFunction
    body: "Avoid passing `locals()` as context to a `render` function"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 49
  end_location:
    row: 9
    column: 57
  fix: ~
  parent: ~

