crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ006_DJ006.py.snap
---
source: crates/ruff/src/rules/flake8_django/mod.rs
expression: diagnostics
---
- kind:
    name: ExcludeWithModelForm
    body: "Do not use `exclude` with `ModelForm`, use `fields` instead"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 15
  fix: ~
  parent: ~

