crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ007_DJ007.py.snap
---
source: crates/ruff/src/rules/flake8_django/mod.rs
---
./resources/test/fixtures/flake8_django/DJ007.py:6:9: DJ007 Do not use `__all__` with `ModelForm`, use `fields` instead
  |
6 | class TestModelForm1(forms.ModelForm):
7 |     class Meta:
8 |         fields = "__all__"
  |         ^^^^^^^^^^^^^^^^^^ DJ007
  |

./resources/test/fixtures/flake8_django/DJ007.py:11:9: DJ007 Do not use `__all__` with `ModelForm`, use `fields` instead
   |
11 | class TestModelForm2(forms.ModelForm):
12 |     class Meta:
13 |         fields = b"__all__"
   |         ^^^^^^^^^^^^^^^^^^^ DJ007
   |


