crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ013_DJ013.py.snap
---
source: crates/ruff/src/rules/flake8_django/mod.rs
---
./resources/test/fixtures/flake8_django/DJ013.py:15:2: DJ013 `@receiver` decorator must be on top of all the other decorators
   |
15 | @test_decorator
16 | @receiver(pre_save, sender=MyModel)
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DJ013
17 | def incorrect_pre_save_handler():
18 |     pass
   |

./resources/test/fixtures/flake8_django/DJ013.py:35:2: DJ013 `@receiver` decorator must be on top of all the other decorators
   |
35 | @receiver(pre_save, sender=MyModel)
36 | @test_decorator
37 | @receiver(pre_save, sender=MyModel)
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DJ013
38 | def incorrect_multiple():
39 |     pass
   |


