crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ08_DJ08.py.snap
---
source: src/rules/flake8_django/mod.rs
expression: diagnostics
---
- kind:
    ModelDunderStr: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
  parent: ~
- kind:
    ModelDunderStr: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 6
    column: 8
  fix: ~
  parent: ~

