crates/ruff/src/rules/flake8_django/snapshots/ruff__rules__flake8_django__tests__DJ13_DJ13.py.snap
---
source: src/rules/flake8_django/mod.rs
expression: diagnostics
---
- kind:
    ReceiverDecoratorChecker: ~
  location:
    row: 8
    column: 1
  end_location:
    row: 8
    column: 9
  fix: ~
  parent: ~

